Fix visitor map layout overlap

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -159,6 +159,13 @@ a:hover {
   font-weight: bolder;
 }
 
+.visitor-map-footer {
+  clear: both;
+  margin: 2rem auto 1rem;
+  padding: 1rem;
+  max-width: 100%;
+}
+
 .visitor-map {
   display: flex;
   justify-content: center;
